<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_gravity="bottom"
  android:background="@android:color/white"
  android:orientation="vertical">

  <TextView
    android:id="@+id/one_time_picker_title"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:layout_alignParentLeft="true"
    android:text="@string/one_emergent_validate_time_setting"
    android:textColor="#373c43"
    android:textSize="18sp"/>

  <ImageView
    android:id="@+id/one_time_picker_close"
    android:layout_width="14dp"
    android:layout_height="14dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp"
    android:layout_alignParentRight="true"
    android:scaleType="fitXY"
    android:src="@drawable/one_time_picker_close"/>

  <TextView
    android:id="@+id/one_time_picker_information"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="20dp"
    android:layout_alignParentLeft="true"
    android:layout_below="@id/one_time_picker_title"
    android:text="@string/one_emergent_validate_time_information"
    android:textColor="#999ba1"
    android:textSize="12sp"/>

  <View
    android:id="@+id/one_time_picker_separator"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginTop="14dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_below="@id/one_time_picker_information"
    android:background="#f0f0f0"/>

  <LinearLayout
    android:id="@+id/one_time_picker_wheel"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:layout_below="@id/one_time_picker_separator"
    android:orientation="horizontal">

    <com.one.framework.app.widget.wheelview.WheelView
      android:id="@+id/one_time_picker_time_from"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="2"
      android:layout_marginLeft="20dp"
      app:wheelGravity="center"/>

    <TextView
      android:id="@+id/one_data_picker_hour"
      android:textStyle="bold"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="2"
      android:layout_marginTop="10dp"
      android:layout_gravity="center"
      android:gravity="center"
      android:text="@string/one_emergent_time_to"
      android:textColor="#373c43"
      android:textSize="18sp"/>

    <com.one.framework.app.widget.wheelview.WheelView
      android:id="@+id/one_time_picker_to"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="2"
      android:layout_marginRight="20dp"
      app:wheelGravity="center"/>

  </LinearLayout>

  <View
    android:id="@+id/one_time_picker_bottom_separator"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginTop="14dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_below="@id/one_time_picker_wheel"
    android:background="#f0f0f0"/>

  <Button
    android:id="@+id/one_time_picker_confirm"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:gravity="center"
    android:layout_below="@id/one_time_picker_bottom_separator"
    android:text="@string/one_sure"
    android:textColor="#ffffff"
    android:textSize="14sp"
    android:background="@drawable/one_time_picker_confirm"/>
</RelativeLayout>