<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@android:color/white"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@id/pay"
    android:orientation="vertical">
    <include layout="@layout/pay_dlg_title_layout"/>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:gravity="center_horizontal"
      android:text="@string/pay_dlg_cur_trip"
      android:textSize="12sp"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="3dp"
      android:layout_gravity="center_horizontal"
      android:gravity="center_horizontal"
      android:orientation="horizontal">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:gravity="center_horizontal"
        android:text="@string/pay_dlg_cur_trip_total"
        android:textSize="10sp"/>

      <TextView
        android:id="@+id/pay_trip_fee"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:includeFontPadding="false"
        android:text="15.4"
        android:textColor="#333333"
        android:textSize="20sp"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:gravity="center_horizontal"
        android:text="@string/pay_dlg_cur_trip_fee_unit"
        android:textSize="10sp"/>
    </LinearLayout>

    <LinearLayout
      android:id="@+id/pay_fee_detail_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:clickable="true"
      android:gravity="center_horizontal"
      android:orientation="horizontal">
      <TextView
        android:id="@+id/pay_fee_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_dlg_cur_trip_fee_detail"
        android:textSize="10sp"/>

      <ImageView
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/pay_fee_detail_arrow"/>
    </LinearLayout>

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginLeft="50dp"
      android:layout_marginRight="50dp">
      <TextView
        android:id="@+id/pay_voucher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="优惠券抵扣"
        android:textSize="10sp"/>

      <LinearLayout
        android:id="@+id/pay_voucher_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:orientation="horizontal">
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="暂无优惠券"
          android:textSize="10sp"/>

        <ImageView
          android:layout_width="10dp"
          android:layout_height="10dp"
          android:layout_gravity="center_vertical"
          android:src="@drawable/pay_fee_detail_arrow"/>
      </LinearLayout>
    </RelativeLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="20dp"
      android:layout_marginLeft="50dp"
      android:layout_marginRight="50dp"
      android:background="#e3e3e3"/>

    <ListView
      android:id="@+id/pay_type_list"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dp"
      android:layout_marginLeft="50dp"
      android:layout_marginRight="50dp"
      android:background="@null"
      android:cacheColorHint="@android:color/transparent"
      android:divider="@null"
      android:listSelector="@drawable/pay_list_selector"/>
  </LinearLayout>

  <com.one.framework.app.widget.TripButton
    android:id="@+id/pay"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_margin="10dp"
    android:layout_gravity="bottom"
    app:disable_color="@android:color/white"
    app:enable_color="#343d4a"
    app:btn_radius="4dp"
    app:text="@string/pay_dlg_pay_fee_confirm"
    app:text_color="@android:color/white"
    app:text_size="14sp"/>

</LinearLayout>